# loop

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  c.cpp  loop-test  loop.loop  main.cpp  natas.php
docs/: BuildInstructions.md  GRAMMAR.md
documentation/: CONTRIBUTING.md  GRAMMAR.md
examples/: example.loop  example.rs  exampleClass.loop  tokens.loop  variables.loop
include/loop/: ast.hpp  console.hpp  global.hpp  io.hpp  lexer.hpp  parser.hpp  tokenizer.hpp  utils.hpp  werror.hpp
src/: CMakeLists.txt  ast.cpp  ast.h  console.cpp  error.cpp  error.h  global.h  io.cpp  io.h  lexer.cpp  loop.cpp  main.cpp  parser.h  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h  werror.cpp  werror.h
test/: CMakeLists.txt  ast.cpp  ast.h  ast.hpp  lexer.cpp  loop.cpp  main.cpp  test.cpp  tokenizer.cpp  tokenizer.h  tokenizer.hpp  unit_test.cpp  unit_test.h  unit_test.hpp
